force-app/main/default/objects/Service_Ticket__c/Service_Ticket__c.object-meta.xml
<CustomObject>
    <description>Service ticket object in Community</description>
    <label>Service Ticket</label>
    <nameField>
        <displayFormat>ST-{YYYY}-{MM}-{00000}</displayFormat>
        <label>Service Ticket #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>