force-app/main/default/objects/Service_Ticket__c/fields/ASR_Name__c.field-meta.xml
<CustomField>
    <fullName>ASR_Name__c</fullName>
    <formula>Brand_Name__r.Owner.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASR Name</label>
    <type>Text</type>
</CustomField>