force-app/main/default/objects/Service_Ticket__c/fields/Brand_Contact__c.field-meta.xml
<CustomField>
    <fullName>Brand_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Tickets</relationshipLabel>
    <relationshipName>Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>