force-app/main/default/objects/Service_Ticket__c/fields/COA_Verified__c.field-meta.xml
<CustomField>
    <fullName>COA_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>COA Verified</label>
    <type>Checkbox</type>
</CustomField>