force-app/main/default/objects/Service_Ticket__c/fields/Destination_Site__c.field-meta.xml
<CustomField>
    <fullName>Destination_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Service Tickets</relationshipLabel>
    <relationshipName>Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>