force-app/main/default/objects/Service_Ticket__c/fields/DL__c.field-meta.xml
<CustomField>
    <fullName>DL__c</fullName>
    <label>DL #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>