force-app/main/default/objects/Service_Ticket__c/fields/Drive_And_Contact_Details__c.field-meta.xml
<CustomField>
    <fullName>Drive_And_Contact_Details__c</fullName>
    <label>Driver Contact and Vehicle details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>