force-app/main/default/objects/Service_Ticket__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>