force-app/main/default/objects/Service_Ticket__c/fields/License_DBA__c.field-meta.xml
<CustomField>
    <fullName>License_DBA__c</fullName>
    <formula>Licensed_Premise__r.License_DBA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License DBA</label>
    <type>Text</type>
</CustomField>