force-app/main/default/objects/Service_Ticket__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <formula>Licensed_Premise__r.License_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Number</label>
    <type>Text</type>
</CustomField>