force-app/main/default/objects/Service_Ticket__c/fields/Licensed_Premise__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensed Premise</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Service Tickets</relationshipLabel>
    <relationshipName>Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>