force-app/main/default/objects/Service_Ticket__c/fields/Licensed_Premise_Address__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Premise_Address__c</fullName>
    <formula>Licensed_Premise__r.License_Address__c &amp;IF( NOT(ISNULL(TEXT(Licensed_Premise__r.License_City__c))),&apos;, &apos; &amp;TEXT(Licensed_Premise__r.License_City__c),&apos;&apos;) &amp;IF( NOT(ISNULL(TEXT(Licensed_Premise__r.License_State__c))),&apos;, &apos; &amp;TEXT(Licensed_Premise__r.License_State__c),&apos;&apos;) &amp;IF( NOT(ISNULL(TEXT(Licensed_Premise__r.License_Country__c))),&apos;, &apos; &amp;TEXT(Licensed_Premise__r.License_Country__c),&apos;&apos;) &amp;IF( NOT(ISNULL(Licensed_Premise__r.License_Zip__c)),&apos;, &apos; &amp;Licensed_Premise__r.License_Zip__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Licensed Premise Address</label>
    <type>Text</type>
</CustomField>