force-app/main/default/objects/Service_Ticket__c/fields/Max_Material_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Material_Arrival_Date__c</fullName>
    <label>Max Material Arrival Date</label>
    <summarizedField>Service_Ticket_Line__c.Expected_Arrival_At_Filligreen__c</summarizedField>
    <summaryForeignKey>Service_Ticket_Line__c.Service_Ticket__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>