force-app/main/default/objects/Service_Ticket__c/fields/Pass_through_Payment__c.field-meta.xml
<CustomField>
    <fullName>Pass_through_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass-through Payment?</label>
    <type>Checkbox</type>
</CustomField>