force-app/main/default/objects/Service_Ticket__c/fields/Publish_ST_To_Slack_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Publish_ST_To_Slack_Date_Time__c</fullName>
    <formula>CreatedDate +65/1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Publish ST To Slack Date Time</label>
    <type>DateTime</type>
</CustomField>