force-app/main/default/objects/Service_Ticket__c/fields/Request_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Request_Date_Time__c</fullName>
    <label>Request Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>