force-app/main/default/objects/Service_Ticket__c/fields/Service_Complete__c.field-meta.xml
<CustomField>
    <fullName>Service_Complete__c</fullName>
    <label>Service Complete</label>
    <type>Date</type>
</CustomField>