force-app/main/default/objects/Service_Ticket__c/fields/Special_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Special_Instruction__c</fullName>
    <label>Special Instruction</label>
    <type>TextArea</type>
</CustomField>