force-app/main/default/objects/Service_Ticket__c/fields/Total_Open_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Lines__c</fullName>
    <label>Total Open Lines</label>
    <summaryFilterItems>
        <field>Service_Ticket_Line__c.Status__c</field>
        <operation>equals</operation>
        <value>New, Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Ticket_Line__c.Service_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>