force-app/main/default/objects/Service_Ticket__c/fields/Total_Service_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Lines__c</fullName>
    <label>Total Service Lines</label>
    <summaryForeignKey>Service_Ticket_Line__c.Service_Ticket__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>