force-app/main/default/objects/Service_Ticket__c/fields/Total_Weight_lbs__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight_lbs__c</fullName>
    <label>Total Weight (lbs)</label>
    <summarizedField>Service_Ticket_Line__c.Total_Weight_lbs__c</summarizedField>
    <summaryFilterItems>
        <field>Service_Ticket_Line__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Service_Ticket_Line__c.Service_Ticket__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>