force-app/main/default/objects/Service_Ticket__c/fields/Transfer_Method__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Method__c</fullName>
    <label>Transfer Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop-off</fullName>
            </value>
            <value>
                <fullName>Pick-up</fullName>
            </value>
            <value>
                <fullName>Product Conversions</fullName>
            </value>
            <value>
                <fullName>D2D Transfer</fullName>
                <isActive>false</isActive>
                <label>D2D Transfer</label>
            </value>
            <value>
                <fullName>None (In stock)</fullName>
                <isActive>false</isActive>
                <label>None (In stock)</label>
            </value>
            <value>
                <fullName>Sample Pick-Up</fullName>
                <isActive>false</isActive>
                <label>Sample Pick-Up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>