force-app/main/default/objects/Service_Ticket__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporter</label>
    <referenceTo>State_Licenses__c</referenceTo>
    <relationshipLabel>Service Tickets (Transporter)</relationshipLabel>
    <relationshipName>Transporters</relationshipName>
    <type>Lookup</type>
</CustomField>